<resources>
    <string name="app_name">Value Counter</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">New Value</string>
    <string name="label_variable_bundle_location">Save Location:</string>
    <string name="save_button_label">Save</string>
    <string name="cancel_button_label">Cancel</string>
    <string name="ellipsis">&#8230;</string>
    <string name="label_bundle_name">Name:</string>
    <string name="label_bundle_value">Value:</string>
    <string name="label_bundle_button1">Button 1:</string>
    <string name="label_bundle_button2">Button 2:</string>
    <string name="label_bundle_button3">Button 3:</string>
    <string name="delete_button_label">Delete</string>
    <string name="label_log_length">Log Length:</string>
    <string name="settings_button_description">Settings</string>
    <string name="button_1_how_much">Button 1: How much?</string>
    <string name="button_2_how_much">Button 2: How much?</string>
    <string name="button_3_how_much">Button 3: How much?</string>
    <string name="view_log">View Log</string>
    <string name="appname_settings">Value Counter: Settings</string>
    <string name="reset_to_default_label">Reset to Default</string>
    <string name="new_database">New Database</string>
    <string name="open_database">Open Database</string>
    <string name="open_default_database">Open Default Database</string>
    <string name="empty_log">There are no entries in this log.</string>
    <string name="error_no_load_no_delete">Error: Cannot delete without a loaded database.</string>
    <string name="error_no_load_no_save">Error: Cannot save without a loaded database.</string>
    <string name="error_no_resolve_location">Error: Cannot resolve selected location.</string>
    <string name="error_no_permission">Error: Cannot read from database without permission.</string>
    <string name="error_no_read">Error: Cannot read from database.</string>
    <string name="error_enter_integer">Error: You must enter an integer: %s</string>
    <string name="cannot_undo">This action cannot be undone. Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="choose_op_type">Choose an operation type</string>
    <string name="none_op">None</string>
    <string name="database_location">Show Database Location</string>
    <string name="default_database_location">Default (internal)</string>
    <string name="database_unreadable">Database is unreadable.</string>
</resources>
