<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="net.hashjellyfish.valuecounter.MainActivity">

    <item
        android:id="@+id/action_add"
        android:orderInCategory="50"
        android:title="@string/action_add"
        app:showAsAction="never" />

    <!--item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" /-->

    <item
        android:id="@+id/action_new_database"
        android:orderInCategory="75"
        android:title="@string/new_database"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open_database"
        android:orderInCategory="80"
        android:title="@string/open_database"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open_default_database"
        android:orderInCategory="85"
        android:title="@string/open_default_database"
        app:showAsAction="never" />
</menu>
