<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainSettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/label_variable_bundle_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_variable_bundle_location"
                android:textSize="@dimen/normal_font_size" />

            <EditText
                android:id="@+id/vb_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/save_settings_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_button_label"
                android:textSize="@dimen/large_font_size"
                android:textStyle="bold" />

            <Button
                android:id="@+id/cancel_settings_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_button_label"
                android:textSize="@dimen/large_font_size"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>