<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BundleSettingsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/label_bundle_name"
                    android:textStyle="bold"
                    android:textSize="@dimen/normal_font_size"
                    android:layout_weight="0" />

                <EditText
                    android:id="@+id/bundle_name_field"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/normal_font_size"
                    android:layout_weight="1"
                    android:inputType="text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/label_bundle_value"
                    android:textSize="@dimen/normal_font_size"
                    android:textStyle="bold"
                    android:layout_weight="0" />

                <EditText
                    android:id="@+id/bundle_value_field"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/normal_font_size"
                    android:layout_weight="1"
                    android:inputType="number" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/label_bundle_button1"
                    android:textSize="@dimen/normal_font_size"
                    android:textStyle="bold"
                    android:layout_weight="0" />

                <Button
                    android:id="@+id/bundle_op1_type"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/normal_font_size"
                    android:textStyle="bold"
                    android:layout_weight="0" />

                <EditText
                    android:id="@+id/bundle_op1_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/normal_font_size"
                    android:layout_weight="1"
                    android:inputType="number" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/label_bundle_button2"
                    android:textSize="@dimen/normal_font_size"
                    android:textStyle="bold"
                    android:layout_weight="0" />

                <Button
                    android:id="@+id/bundle_op2_type"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/normal_font_size"
                    android:textStyle="bold"
                    android:layout_weight="0" />

                <EditText
                    android:id="@+id/bundle_op2_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/normal_font_size"
                    android:layout_weight="1"
                    android:inputType="number" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/label_bundle_button3"
                    android:textSize="@dimen/normal_font_size"
                    android:textStyle="bold"
                    android:layout_weight="0" />

                <Button
                    android:id="@+id/bundle_op3_type"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/normal_font_size"
                    android:textStyle="bold"
                    android:layout_weight="0" />

                <EditText
                    android:id="@+id/bundle_op3_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/normal_font_size"
                    android:layout_weight="1"
                    android:inputType="number" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/save_bundle_settings_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/save_button_label"
                    android:textSize="@dimen/large_font_size"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/cancel_bundle_settings_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/cancel_button_label"
                    android:textSize="@dimen/large_font_size"
                    android:textStyle="bold"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>